--- a/settings.json
+++ b/settings.json
@@ -1,12 +1,12 @@
 {
   "token": "",
   "prefix": "!",
-  "owner_id": "",
+  "owner_id": "539800670652465193",
   "presence_type": "PLAYING",
-  "channel_id": "",
+  "channel_id": "810526526063116308",
   "shuffle": true,
-  "pause_on_empty": true,
-  "owner_reporting": false,
+  "pause_on_empty": false,
+  "owner_reporting": true,
   "soundcloud_client_id": "",
   "youtube_cookie": "",
   "playing_status": "{status_icon} {song_name}",
